TP7 init